# V4DataBaseEditor

./: BHA Components Database.db  CMakeLists.txt  README.md  V4DataBaseEditor.pro  databasemanager.cpp  databasemanager.h  databasesaver.cpp  databasesaver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  storage.cpp  storage.h  storageeditor.cpp  storageeditor.h
db_model/: additionalmnemonic.cpp  additionalmnemonic.h  company.cpp  company.h  conversionformula.cpp  conversionformula.h  mainmnemonic.cpp  mainmnemonic.h  method.cpp  method.h  producer.cpp  producer.h  sensor.cpp  sensor.h  sensormnemonic.cpp  sensormnemonic.h  tool.cpp  tool.h  tooldescription.cpp  tooldescription.h  toolmnemonic.cpp  toolmnemonic.h  toolsensor.cpp  toolsensor.h  typeofunit.cpp  typeofunit.h  unit.cpp  unit.h  unittype.cpp  unittype.h
editor_windows/: additionalmnemonicaddwindow.cpp  additionalmnemonicaddwindow.h  additionalmnemonicaddwindow.ui  additionalmnemoniceditor.cpp  additionalmnemoniceditor.h  additionalmnemoniceditor.ui  comparedatadialog.cpp  comparedatadialog.h  comparedatadialog.ui  mainmnemonicaddwindow.cpp  mainmnemonicaddwindow.h  mainmnemonicaddwindow.ui  mainmnemoniceditor.cpp  mainmnemoniceditor.h  mainmnemoniceditor.ui  sensor_editor.cpp  sensor_editor.h  sensor_editor.ui  sensoraddwindow.cpp  sensoraddwindow.h  sensoraddwindow.ui  sensormnemonicrelationeditor.cpp  sensormnemonicrelationeditor.h  sensormnemonicrelationeditor.ui  tool_editor.cpp  tool_editor.h  tool_editor.ui  tooladdwindow.cpp  tooladdwindow.h  tooladdwindow.ui  toolmnemonicrelationeditor.cpp  toolmnemonicrelationeditor.h  toolmnemonicrelationeditor.ui  toolsensorrelationeditor.cpp  toolsensorrelationeditor.h  toolsensorrelationeditor.ui
editor_windows/DjVuReader.2.0.0.27/: DjVuReader.ini  DjVuReader_Help.html
migrations/: upgrade_1_2.sql
styles/: dark.qss  light.qss
translations/: V4DataBaseEditor_ru.qm  V4DataBaseEditor_ru.ts  V4DataBaseEditor_ru_RU.ts
views/: toolsensormnemonictreeview.cpp  toolsensormnemonictreeview.h
